--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT=4000
+PORT=3000
 NODE_ENV=development
+MONGO_URI=mongodb+srv://skillpasschain:gkEqLHy37j8RguOP@cluster0.iu1nn8n.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
