--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "isomorphic-dompurify": "^2.26.0",
+    "mongoose": "^8.17.1",
     "uuid": "^11.1.0",
-    "xss-clean": "^0.1.4"
+    "validator": "^13.15.15",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.2.0",
+    "@types/validator": "^13.15.2",
     "eslint": "^9.32.0",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
